--- a/myPageVer02/css/contact.css
+++ b/myPageVer02/css/contact.css
@@ -9,9 +9,10 @@ body {
     display: flex;
     justify-content: center;
     align-content: center;
-    margin-top: 200px;
+    padding-top: 30px;
 }
 .four {
+
     text-align: center;
     align-items: center;
 }
@@ -19,15 +20,18 @@ body {
 .contact_img {
     width: 100%;
     height: 300px;
-    padding-top: 50px;
+    padding-top: 100px;
 }
 
 .ct {
-    margin-top: 80px;
     font-family: 'Roboto Slab', serif;
     text-decoration: none;
     color: white;
     font-size: 50px;
     font-style: italic;
     margin: 35px;
+}
+
+.forMargin{
+    margin-top: 130px;
 }
