--- a/myPageVer02/css/favorites.css
+++ b/myPageVer02/css/favorites.css
@@ -12,7 +12,8 @@ body {
     margin-top: 100px;
 }
 
-h1 {
+h3 {
+    color: black;
     text-align: center;
 }
 
@@ -30,10 +31,15 @@ h1 {
 
 .list_img {
     width: 300px;
-    height: 300px;
+    height: 200px;
     display: block;
     margin: 7vh 5vh;
     margin-bottom: 50px;
+}
+
+#Soju{
+    width: 300px;
+    height: 300px;
 }
 
 .favorites {
