--- a/myPageVer02/css/about.css
+++ b/myPageVer02/css/about.css
@@ -2,26 +2,34 @@ body {
     background-color: #9d949e;
     background-size: cover;
     background-attachment: fixed; 
-    background-position: center; 
+    background-position: center;
 }
 
 .list {
     display: flex;
     justify-content: center;
     align-content: center;
-    margin-top: 25vh;
+    /* margin-top: 150px; */
 }
 
 .intext {
     float: right;
-    margin-top: 35px;
+    padding-top: 60px;
     padding-left: 50px;
 }
 
-
+.me{
+    border-radius: 15%;
+    display: inline-block;
+    padding: 0.5rem;
+    margin-top: 20px;
+    border: 1px solid gray;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgb(255, 255, 255, 0.5);
+}
 .two {
     display: flex;
     justify-content: center;
     align-content: center;
-    margin-top: 25vh;
+    margin-top: 120px;
 }
