[MOD]favorites&skill 호버 이미지 확대 추가

--- a/myPageVer02/css/index.css
+++ b/myPageVer02/css/index.css
@@ -1,5 +1,6 @@
 body{
-    background-color: #4e5a56;
+    background-color: rgb(58, 58, 108);
+    /* background-color: #1d5374; */
     background-size: cover;
     /* background-attachment: fixed;  */
     background-position: center; 
