--- a/myPageVer02/css/about.css
+++ b/myPageVer02/css/about.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #9d949e;
+    background-color: #3b409b;
     background-size: cover;
     background-attachment: fixed; 
     background-position: center;
