--- a/myPageVer02/css/contact.css
+++ b/myPageVer02/css/contact.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #b39db3;
+    background-color: #9f4f9f;
     background-size: cover;
     background-attachment: fixed; 
     background-position: center; 
@@ -21,6 +21,13 @@ body {
     width: 100%;
     height: 300px;
     padding-top: 100px;
+    border-radius: 15%;
+    display: inline-block;
+    padding: 0.5rem;
+    margin-top: 100px;
+    border: 1px solid gray;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgb(255, 255, 255, 0.5);
 }
 
 .ct {
@@ -33,5 +40,5 @@ body {
 }
 
 .forMargin{
-    margin-top: 130px;
+    margin-top: 80px;
 }
