--- a/myPageVer02/css/favorites.css
+++ b/myPageVer02/css/favorites.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #e0d8cc;
+    background-color: #4e5a56;
     background-size: cover;
     background-attachment: fixed; 
     background-position: center; 
@@ -13,7 +13,6 @@ body {
 }
 
 h3 {
-    color: black;
     text-align: center;
 }
 
@@ -43,10 +42,16 @@ h3 {
     border: 1px solid gray;
     background-color: rgba(255, 255, 255, 0.1);
     border: 1px solid rgb(255, 255, 255, 0.5);
+    /* -------------------------------------------- */
+    object-fit:cover;
+    transform:scale(1.0);
+    transition: transform .5s;
 }
 
-
-
+.list_img:hover{
+    transform:scale(1.3);
+    transition: transform .5s;
+}
 .favorites {
     display:inline-flex;
     margin-top: 60px;
