--- a/myPageVer02/css/skill.css
+++ b/myPageVer02/css/skill.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #cfcfe8;
+    background-color: #909fa6;
     background-size: cover;
     background-attachment: fixed; 
     background-position: center; 
@@ -9,7 +9,6 @@ body{
     display: flex;
     justify-content: center;
     align-content: center;
-    margin-top: 40px;
 }
 
 h3{
@@ -34,7 +33,7 @@ h3{
     width: 300px;
     height: 200px;
     display: block;
-    margin: 7vh 5vh;
+    margin: 30px 30px;
     margin-bottom: 50px;
     /* ---------------------- */
     display: inline-block;
@@ -43,9 +42,21 @@ h3{
     border: 1px solid gray;
     background-color: rgba(255, 255, 255, 0.1);
     border: 1px solid rgb(255, 255, 255, 0.5);
+    /* ----------------------------------------------- */
+    object-fit:cover;
+    transform:scale(1.0);
+    transition: transform .5s;
 }
 
+.tool_img:hover{
+    transform:scale(1.3);
+    transition: transform .5s;
+}
 .tool {
     display:inline-flex;
-    margin-top: 60px;
+    margin-top: 30px;
+}
+
+.tool_text{
+    margin-top: 5px;
 }
