[MOD]navBar hover font-size ratio Modify

--- a/myPageVer02/css/main.css
+++ b/myPageVer02/css/main.css
@@ -40,7 +40,8 @@ h5{
     text-decoration: none;
 }
 .menu li a:hover{
-    font-size: 140%
+    font-size: 120%;
+    transition: transform .3s;
 }
 
 .menu ul {
